--- a/rc.d/3.mfrisbeed.sh.in
+++ b/rc.d/3.mfrisbeed.sh.in
@@ -67,12 +67,19 @@ fi
 
 echo -n " mfrisbeed"
 rm -f /var/run/frisbeed-*.pid
+
 args="-C emulab -i @BOSSNODE_IP@"
 # to allow broadcast, uncomment the following line
 #args="$args -x ucast,mcast,bcast"
+
 # if an inner elab, use outer boss as our parent
 if [ -n "@OUTERBOSS_NODENAME@" ]; then
     args="$args -S @OUTERBOSS_NODENAME@"
+fi
+
+# see if we need to be an IGMP querier
+if [ "@NEEDMCQUERIER@" = "1" ]; then
+    args="$args -Q 30"
 fi
 
 # XXX I am actually NOT going to run it under the wrapper for now
