--- a/clientside/event/GNUmakefile.in
+++ b/clientside/event/GNUmakefile.in
@@ -25,8 +25,10 @@ FBSDREL	:= $(shell uname -r | sed -e 's/\([^-][^-]*\)-.*/\1/')
 FBSDMAJ := $(basename $(FBSDREL))
 ifneq ($(FBSDMAJ),8)
 ifneq ($(FBSDMAJ),9)
+ifneq ($(FBSDMAJ),10)
 # doesn't build right now due to API changes
 SUBDIRS	       += delay-agent
+endif
 endif
 endif
 endif
