Initial changes required to compile / install the Emulab client-side on Windows 7 under Cygwin 1.7.  Mostly tweaks to makefiles to recognize Win7 in addition to Windows XP.
New directory for Win7-specific files: clientside/tmcc/cygwinseven

--- a/clientside/configure.in
+++ b/clientside/configure.in
@@ -242,7 +242,7 @@ outfiles="Makeconf GNUmakefile \
 	  tmcc/freebsd10/GNUmakefile tmcc/freebsd10/netif-emulab \
 	  tmcc/cygwinxp/GNUmakefile tmcc/dp/GNUmakefile \
 	  tmcc/openbsd/GNUmakefile tmcc/ron/GNUmakefile \
-	  tmcc/plab/GNUmakefile \
+	  tmcc/plab/GNUmakefile tmcc/cygwinseven/GNUmakefile \
 	  os/GNUmakefile os/syncd/GNUmakefile \
 	  os/dijkstra/GNUmakefile os/genhostsfile/GNUmakefile \
 	  os/frisbee.redux/GNUmakefile \
