--- a/clientside/tools/GNUmakefile.in
+++ b/clientside/tools/GNUmakefile.in
@@ -7,10 +7,16 @@ SRCDIR		= @srcdir@
 TESTBED_SRCDIR	= @top_srcdir@
 OBJDIR		= @top_builddir@
 SUBDIR		= $(subst $(TESTBED_SRCDIR)/,,$(SRCDIR))
+SYSTEM         := $(shell uname -s)
 
 include $(OBJDIR)/Makeconf
 
+# Cygwin doesn't support/provide pcap
+ifeq ($(findstring CYGWIN_NT,$(SYSTEM)), CYGWIN_NT)
+SUBDIRS		= 
+else
 SUBDIRS		= pcapper
+endif
 
 all:	all-subdirs
 
