--- a/configure.in
+++ b/configure.in
@@ -1248,7 +1248,7 @@ outfiles="$outfiles clientside/GNUmakefile \
  clientside/tmcc/freebsd10/GNUmakefile clientside/tmcc/freebsd10/netif-emulab \
  clientside/tmcc/cygwinxp/GNUmakefile clientside/tmcc/dp/GNUmakefile \
  clientside/tmcc/openbsd/GNUmakefile clientside/tmcc/ron/GNUmakefile \
- clientside/tmcc/plab/GNUmakefile \
+ clientside/tmcc/plab/GNUmakefile clientside/tmcc/cygwinseven/GNUmakefile \
  clientside/os/dijkstra/GNUmakefile clientside/os/genhostsfile/GNUmakefile \
  clientside/os/growdisk/GNUmakefile \
  clientside/os/zapdisk/GNUmakefile \
