Initial changes required to compile / install the Emulab client-side on Windows 7 under Cygwin 1.7.  Mostly tweaks to makefiles to recognize Win7 in addition to Windows XP.
New directory for Win7-specific files: clientside/tmcc/cygwinseven

--- a/configure.in
+++ b/configure.in
@@ -1247,7 +1247,7 @@ outfiles="$outfiles clientside/GNUmakefile \
  clientside/tmcc/freebsd7/supfile clientside/tmcc/freebsd7/netif-emulab \
  clientside/tmcc/cygwinxp/GNUmakefile clientside/tmcc/dp/GNUmakefile \
  clientside/tmcc/openbsd/GNUmakefile clientside/tmcc/ron/GNUmakefile \
- clientside/tmcc/plab/GNUmakefile \
+ clientside/tmcc/plab/GNUmakefile clientside/tmcc/cygwinseven/GNUmakefile \
  clientside/os/dijkstra/GNUmakefile clientside/os/genhostsfile/GNUmakefile \
  clientside/os/growdisk/GNUmakefile \
  clientside/os/zapdisk/GNUmakefile \
