--- a/clientside/configure.in
+++ b/clientside/configure.in
@@ -241,7 +241,7 @@ outfiles="Makeconf GNUmakefile \
 	  tmcc/freebsd7/supfile tmcc/freebsd7/netif-emulab \
 	  tmcc/cygwinxp/GNUmakefile tmcc/dp/GNUmakefile \
 	  tmcc/openbsd/GNUmakefile tmcc/ron/GNUmakefile \
-	  tmcc/plab/GNUmakefile \
+	  tmcc/plab/GNUmakefile tmcc/cygwinseven/GNUmakefile \
 	  os/GNUmakefile os/syncd/GNUmakefile \
 	  os/dijkstra/GNUmakefile os/genhostsfile/GNUmakefile \
 	  os/frisbee.redux/GNUmakefile \
