--- a/clientside/tmcc/cygwinseven/GNUmakefile.in
+++ b/clientside/tmcc/cygwinseven/GNUmakefile.in
@@ -1,4 +1,4 @@
-#
+2#
 # EMULAB-COPYRIGHT
 # Copyright (c) 2000-2011 University of Utah and the Flux Group.
 # All rights reserved.
@@ -6,7 +6,7 @@
 
 #
 # XXX ONLY RUN THIS INSTALL ON A CYGWIN / WINDOWS XP NODE!
-# Similar to linux9, cygwinxp is an overlay on linux, which is an overlay
+# Similar to linux9, cygwinseven is an overlay on linux, which is an overlay
 # on common.
 #
 # Trivial. These things just need to be installed into the right place
@@ -95,7 +95,7 @@ script-install:	dir-install $(SCRIPTS)
 	# Everybody is in the Administrators group already, so sudo is irrelevant.
 	$(INSTALL) -m 755 $(SRCDIR)/sudo.dummy /bin/sudo
 	$(INSTALL) -m 755 $(SRCDIR)/rc.firstboot $(BINDIR)/rc/rc.firstboot
-	$(INSTALL) -m 755 $(SRCDIR)/rc.cygwinxp $(BINDIR)/rc/rc.cygwin
+	$(INSTALL) -m 755 $(SRCDIR)/rc.cygwinseven $(BINDIR)/rc/rc.cygwin
 	#$(INSTALL) -m 755 $(SRCDIR)/clean_logonui $(BINDIR)/clean_logonui
 	$(INSTALL) -m 755 $(SRCDIR)/rc.reboot $(BINDIR)/rc/rc.reboot
 	$(INSTALL) -m 755 $(SRCDIR)/rc.lmhosts $(BINDIR)/rc/rc.lmhosts
